<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:override="true">WAStatus</string>
    <string name="app_version">Version 1.1</string>
    <string name="share_text">Set Whatsapp status, Install WAStatus app - http://docs.google.com/uc?export=document&amp;id=1ce35W-tWClUdsVltDYlivA9r4U63QmbM</string>
    <string name="app_author">Jaisel Rahman</string>
    <string name="app_author_email">jaiselrahman@gmail.com</string>

    <string name="error_network_not_available">No network available</string>
    <string name="error_refresh_videos_failed">Failed to refresh videos</string>

    <string name="video_thumbnail">Video Thumbnail</string>

    <string name="listview_header_hint_normal">Pull to refresh</string>
    <string name="listview_header_hint_release">Release to start refresh</string>
    <string name="listview_loading">Loading…</string>
    <string name="loading_done">Loading done</string>
    <string name="refresh_done">Refresh done</string>
    <string name="refreshing">Refreshing…</string>
    <string name="viewInYoutube">View in YouTube</string>
    <string name="setWhatsappStatus">Set as Whatsapp status</string>
    <string name="error_failed_to_play">Failed to play video</string>
    <string name="view_video">View video</string>
    <string name="split_video">Split video</string>
    <string name="splitting">Splitting…</string>
    <string name="view">View</string>
    <string name="splitting_done">Splitting Done</string>
    <string name="downloading">Downloading…</string>
    <string name="cancel">Cancel</string>
    <string name="split">Split</string>
    <string name="downloading_failed">Downloading failed</string>
    <string name="downloaded">Downloaded</string>
    <string name="error_whatsapp_not_found">Whatsapp not found</string>
    <string name="download_notifications">Download Notifications</string>
    <string name="share_video">Share video</string>
    <string name="request_permission">Please grant required permission</string>
    <string name="downloads">Downloads</string>
    <string name="split_failed">Split failed</string>
    <string name="videos">Videos</string>
    <string name="download">Download</string>
    <string name="download_video">Download Video</string>
    <string name="download_desc">Download your favorite videos locally</string>
    <string name="split_desc">Split videos for Whatsapp status</string>
    <string name="open_in_whatsapp">Open in Whatsapp</string>
    <string name="open_in_whatsapp_desc">Share to contacts or set as Status in Whatsapp</string>
    <string name="licenses">Licenses</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="search_hint">Search or Paste YT link</string>
    <string name="search_desc">Search YouTube or enter YouTube video link</string>
    <string name="play_video">Play video</string>
    <string name="check_download_status">Downloading, check notification for status.</string>
    <string name="check_split_status">Splitting video, check notification for status</string>
</resources>
