<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackgroundBorderless"
    android:padding="3dp">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginEnd="5dp"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/video_thumbnail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:ellipsize="middle"
        android:maxLines="2"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/thumbnail"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="WhatsApp Status song" />


    <ImageView
        android:id="@+id/share"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/view_video"
        android:padding="5dp"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/whatsapp"
        app:layout_constraintStart_toEndOf="@id/thumbnail"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/whatsapp"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/split_video"
        android:src="@drawable/ic_whatsapp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/split"
        app:layout_constraintStart_toEndOf="@id/share"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/split"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/split_video"
        android:padding="5dp"
        android:src="@drawable/ic_split"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/whatsapp"
        app:layout_constraintTop_toBottomOf="@id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>